Clicking on album cards to user to url. Clicking on album covers takes user to album details page. Having issue with redirecting to user profiles.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,18 +75,29 @@ nav {
     height: 70px;
     width: 100vw;
     display: flex; justify-content: center; align-items: center;
-    gap: 30px;
-
 }
 
 nav a {
-    height: 40px; width: 40px;
+    height: 100%; width: 80px;
     padding: 5px;
     border-radius: 10px;
+    display: flex; flex-direction: column; justify-content: center; align-items: center;
+    gap: 2px;
+    transition: .2s;
+}
+
+nav a:hover {
+    filter: brightness(.8)  saturate(5);
+    transition: .1s;
 }
 
 nav img {
-    height: 100%;
+    height: 35px;
+}
+
+nav a p {
+    margin: 0;
+    color: var(--white);
 }
 
 #logout {
